<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Home" android:icon="@drawable/ic_home" android:id="@+id/homeFragment"/>
    <item android:title="Notification" android:icon="@drawable/ic_notification" android:id="@+id/notificationFragment"/>
    <item android:title="Sell" android:icon="@drawable/ic_add_circle" android:id="@+id/sellFragment"/>
    <item android:title="Transaction" android:icon="@drawable/ic_menu" android:id="@+id/transactionFragment"/>
    <item android:title="Account" android:icon="@drawable/ic_user" android:id="@+id/accountFragment"/>
</menu>