...
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_bg_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="21dp"
            android:layout_marginHorizontal="16dp"
            android:id="@+id/menuContainer">
            <View
                android:outlineProvider="background"
                android:id="@+id/bg_section_edit"
                android:layout_width="match_parent"
                android:src="@drawable/outline_btn"
                android:background="@drawable/outline_btn"
                android:layout_height="51dp"
                android:layout_marginTop="21dp"
...
                app:layout_constraintTop_toTopOf="@id/bg_section_wishlist"
                app:layout_constraintBottom_toBottomOf="@id/bg_section_wishlist"
                android:contentDescription="@string/content_description_icon" />

            <!--Section Keluar / Logout-->
            <View
                android:id="@+id/bg_section_logout"
                android:layout_width="match_parent"
                android:src="@drawable/outline_btn"
                android:layout_height="51dp"
                android:background="@drawable/outline_btn"
                android:layout_marginTop="21dp"
                android:layout_marginHorizontal="16dp"
...
